add invoices files

--- a/src/main/java/view/invoice.form
+++ b/src/main/java/view/invoice.form
@@ -271,7 +271,7 @@
     </Container>
     <Component class="javax.swing.JButton" name="new_item">
       <Properties>
-        <Property name="text" type="java.lang.String" value="add item"/>
+        <Property name="text" type="java.lang.String" value="new item"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="new_itemActionPerformed"/>
